# brick-breaker

./: .gitmodules  CMakeLists.txt  README.md
clients/: CMakeLists.txt
clients/2d/: CMakeLists.txt
clients/2d/src/: draw.cpp  main.cpp  main_scene.cpp  main_scene.hpp
clients/brick-breaker/: CMakeLists.txt  README.md
clients/brick-breaker/src/: about.cpp  about.hpp  ball.cpp  ball.hpp  brick.hpp  collision.cpp  collision.hpp  constants.hpp  data.hpp  events.hpp  id_generator.hpp  level.cpp  level.hpp  levels.cpp  levels.hpp  main.cpp  menu.cpp  menu.hpp  menu_selection.hpp  my_camera_controller.cpp  my_camera_controller.hpp  orb.hpp  paddle.cpp  paddle.hpp
clients/minimal/: CMakeLists.txt  README.md
clients/minimal/src/: main.cpp
clients/teapot/: CMakeLists.txt  README.md
clients/teapot/src/: main.cpp  my_camera_controller.cpp  my_camera_controller.hpp
data/levels/: Bruh_2.json  level.5.json  level1.json  level3.json  level4.json
data/levels/adventure/: level3.json  level4.json  level5.json
data/levels/custom/: basic.json
data/models/: ball.blend  ball.blend1  brick.blend  brick.blend1  brick1.blend  brick1.blend1  lamp.blend  lamp.blend1  paddle.blend  paddle.blend1  platform.blend  platform.blend1
data/shaders/: debug.frag  debug.vert  flat.frag  flat.vert  screen_quad.frag  screen_quad.vert  shadow.vert  simple.frag  simple.vert  simple_textured.frag  simple_textured.vert  simple_textured_shadows.frag  simple_textured_shadows.vert  skybox.frag  skybox.vert  text.frag  text.vert
data/shaders/common/: lighting.glsl  shadows.glsl
engine/: CMakeLists.txt  README.md
engine/src/engine/: application.cpp  application.hpp  application_properties.hpp  audio.cpp  audio.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  camera_2d.hpp  engine.hpp  events.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  info_and_debug.cpp  info_and_debug.hpp  input.hpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  opengl.cpp  opengl.hpp  post_processing.hpp  renderable.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  sound_data.cpp  sound_data.hpp  texture.cpp  texture.hpp  texture_data.cpp  texture_data.hpp  (+4 more)
scripts/: run.sh  setup.bat  setup.sh  setup_release.bat  setup_release.sh
src/: application.cpp  application.hpp  main.cpp  my_camera_controller.cpp  my_camera_controller.hpp
src/engine/: application.cpp  application.hpp  buffer.cpp  buffer.hpp  camera_controller.hpp  engine.hpp  events.cpp  events.hpp  framebuffer.cpp  framebuffer.hpp  info_and_debug.cpp  info_and_debug.hpp  input.cpp  input.hpp  logging.cpp  logging.hpp  panic.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture_data.cpp  texture_data.hpp  vertex_array.cpp  vertex_buffer_layout.cpp  window.cpp  window.hpp
